ui: Fix topbar CSS
- Center menu button
- Stop querymode topbar overlapping the collapsed sidebar menu button

Bug: 144150172

--- a/ui/src/assets/sidebar.scss
+++ b/ui/src/assets/sidebar.scss
@@ -50,7 +50,6 @@
       background-color: #262f3c;
       height: var(--topbar-height);
       left: calc(var(--sidebar-width) - 50px);
-      padding-top: 3px;
       border-radius: 0 5px 5px 0;
       border-bottom: inherit;
       visibility: visible;  // So stays visible when the sidebar is hidden.
